--- a/1-homepage.html
+++ b/1-homepage.html
@@ -115,60 +115,62 @@
           </div>
         </div>
       </div>
-      <!-- Quotes section -->
-    </section class="section-quotes">
-    <div class="bgd-primary">
-      <div class="container">
-        <div class="section-body text-white">
-          <div id="carousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="d-flex justify-content-center align-items-center p-5 mx-5">
-                  <img class="rounded-circle img-fluid mx-4" src="./images/profile_5.jpg" width="150" height="150">
-                  <div>
-                    <p>
-                      &laquo; Those tutorials are concise and go straight to the point. I can't think of a better place
-                      to learn smiling. And it's so fun!
-                    </p>
-                    <div class="font-weight-bold">
-                      Person Name
+    </section>
+    <!-- Quotes section -->
+    <section class="section-quotes bgd-primary">
+        <div class="container">
+          <div class="section-body text-white">
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="d-flex justify-content-center align-items-center p-5 mx-5">
+                    <img class="rounded-circle img-fluid mx-4" src="./images/profile_5.jpg" width="150" height="150">
+                    <div>
+                      <p>
+                        &laquo; Those tutorials are concise and go straight to the point. I can't think of a better
+                        place
+                        to learn smiling. And it's so fun!
+                      </p>
+                      <div class="font-weight-bold">
+                        Person Name
+                      </div>
+                      <div class="font-italic">
+                        weather presenter
+                      </div>
                     </div>
-                    <div class="font-italic">
-                      weather presenter
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="d-flex justify-content-center align-items-center p-5 mx-5">
+                    <img class="rounded-circle img-fluid mx-4" src="./images/profile_5.jpg" width="150" height="150">
+                    <div>
+                      <p>
+                        &laquo; Those tutorials are concise and go straight to the point. I can't think of a better
+                        place
+                        to learn smiling. And it's so fun!
+                      </p>
+                      <div class="font-weight-bold">
+                        Person Name
+                      </div>
+                      <div class="font-italic">
+                        weather presenter
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center p-5 mx-5">
-                  <img class="rounded-circle img-fluid mx-4" src="./images/profile_5.jpg" width="150" height="150">
-                  <div>
-                    <p>
-                      &laquo; Those tutorials are concise and go straight to the point. I can't think of a better place
-                      to learn smiling. And it's so fun!
-                    </p>
-                    <div class="font-weight-bold">
-                      Person Name
-                    </div>
-                    <div class="font-italic">
-                      weather presenter
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
-      </div>
-    </div>
+    </section>
   </main>
 </body>
 
