--- a/1-homepage.html
+++ b/1-homepage.html
@@ -160,11 +160,15 @@
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span aria-hidden="true">
+                  <img src="./images/arrow_white_left.png">
+                </span>
                 <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span aria-hidden="true">
+                  <img src="./images/arrow_white_right.png">
+                </span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
