--- a/1-homepage.html
+++ b/1-homepage.html
@@ -118,7 +118,7 @@
     </section>
     <!-- Quotes section -->
     <section class="section-quotes bgd-primary">
-        <div class="container">
+        <div class="container-fluid">
           <div class="section-body text-white">
             <div id="carousel" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
