--- a/courses.html
+++ b/courses.html
@@ -121,6 +121,136 @@
         </div>
       </div>
     </section>
+    <!-- Latest section -->
+    <section class="section-latest">
+      <div class="container">
+        <div class="section-body">
+          <h6 class="section-title text-muted">8 videos</h6>
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <div class="card border-0">
+                <div class="position-relative">
+                  <img class="card-img-top img-fluid" src="./images/thumbnail_1.jpg" alt="">
+                  <img class="card-img-overlay m-auto align-self-center" src="./images/play.png" alt="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Diagonal Smile</h5>
+                  <p class="card-text text-muted">
+                    Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                  </p>
+                  <div class="row align-items-center my-2">
+                    <img class="col-3 img-fluid rounded-circle" src="./images/profile_1.jpg" alt="">
+                    <h6 class="col color-primary pl-0">Phillip Massey</h6>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_off.png" alt="">
+                    </div>
+                    <div class="color-primary">
+                      8 min
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="card border-0">
+                <div class="position-relative">
+                  <img class="card-img-top img-fluid" src="./images/thumbnail_2.jpg" alt="">
+                  <img class="card-img-overlay m-auto align-self-center" src="./images/play.png" alt="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sad Smile</h5>
+                  <p class="card-text text-muted">
+                    Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                  </p>
+                  <div class="row align-items-center my-2">
+                    <img class="col-3 img-fluid rounded-circle" src="./images/profile_1.jpg" alt="">
+                    <h6 class="col color-primary pl-0">Phillip Massey</h6>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_off.png" alt="">
+                    </div>
+                    <div class="color-primary">
+                      8 min
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="card border-0">
+                <div class="position-relative">
+                  <img class="card-img-top img-fluid" src="./images/thumbnail_3.jpg" alt="">
+                  <img class="card-img-overlay m-auto align-self-center" src="./images/play.png" alt="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sad Smile</h5>
+                  <p class="card-text text-muted">
+                    Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                  </p>
+                  <div class="row align-items-center my-2">
+                    <img class="col-3 img-fluid rounded-circle" src="./images/profile_1.jpg" alt="">
+                    <h6 class="col color-primary pl-0">Phillip Massey</h6>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_off.png" alt="">
+                    </div>
+                    <div class="color-primary">
+                      8 min
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <div class="card border-0">
+                <div class="position-relative">
+                  <img class="card-img-top img-fluid" src="./images/thumbnail_4.jpg" alt="">
+                  <img class="card-img-overlay m-auto align-self-center" src="./images/play.png" alt="">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sad Smile</h5>
+                  <p class="card-text text-muted">
+                    Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
+                  </p>
+                  <div class="row align-items-center my-2">
+                    <img class="col-3 img-fluid rounded-circle" src="./images/profile_1.jpg" alt="">
+                    <h6 class="col color-primary pl-0">Phillip Massey</h6>
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_on.png" alt="">
+                      <img src="./images/star_off.png" alt="">
+                    </div>
+                    <div class="color-primary">
+                      8 min
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <div class="bgd-dark">
